--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,7 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   padding: 1em;
   gap: 1em;
 }
@@ -244,6 +245,11 @@ header {
   border-radius: 50px;
   width: 100%;
   padding: 0.5em 1.2em;
+}
+.access-card .form input[type=submit] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 footer {
